--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,18 +49,31 @@ nav:
 
 theme:
   name: material
-  palette:
-    primary: teal
-    accent: pink
-    scheme: preference
-  font:
-    text: Roboto
-    code: Fira Code
+  # Material 主题配置
   features:
     - navigation.tabs
     - navigation.indexes
     - navigation.sections
-    - navigation.expand
+    - search.highlight
+    - search.suggest
+    - toc.integrate
+  palette:
+    # 主题配色方案
+    - scheme: default
+      primary: indigo
+      accent: blue
+      toggle:
+        icon: material/toggle-switch-off-outline
+        name: Switch to dark mode
+    - scheme: slate
+      primary: deep purple
+      accent: lime
+      toggle:
+        icon: material/toggle-switch
+        name: Switch to light mode
+  font:
+    text: Roboto
+    code: JetBrains Mono
 #    - navigation.top
 
 extra_javascript:
