--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -17,6 +17,7 @@ jobs:
         sudo apt install python3-pip python3-dev python3-setuptools
         sudo pip3 install -U mkdocs==1.3.0 pygments==2.17.2 pymdown-extensions
         sudo pip3 install mkdocs-exclude
+        sudo pip3 install mkdocs-material
         sudo pip3 install jieba
 
     - name: Build the document
