--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,35 +46,21 @@ nav:
         - 历史版本: releases/history.md
     - 术语表: glossary.md
 
-
 theme:
   name: material
-  # Material 主题配置
   features:
-    - navigation.tabs
-    - navigation.indexes
-    - navigation.sections
-    - search.highlight
-    - search.suggest
-    - toc.integrate
+    - navigation.tabs  # 启用顶部导航栏
+    - navigation.sections  # 启用左侧导航栏的分组
+    - search.highlight  # 搜索时高亮匹配内容
+    - search.suggest  # 搜索时显示建议
+    - content.code.annotate  # 代码块注释
+    - content.tooltips  # 内容中的工具提示
   palette:
-    # 主题配色方案
-    - scheme: default
-      primary: indigo
-      accent: blue
-      toggle:
-        icon: material/toggle-switch-off-outline
-        name: Switch to dark mode
-    - scheme: slate
-      primary: deep purple
-      accent: lime
-      toggle:
-        icon: material/toggle-switch
-        name: Switch to light mode
+    primary: indigo  # 主色调
+    accent: blue  # 强调色
   font:
-    text: Roboto
-    code: JetBrains Mono
-#    - navigation.top
+    text: Roboto  # 正文字体
+    code: Roboto Mono  # 代码字体
 
 extra_javascript:
     - 'https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_CHTML'
